Started converting the css to better colors.

--- a/www/views/tabs/tabs.html
+++ b/www/views/tabs/tabs.html
@@ -1,5 +1,5 @@
 <ion-footer-bar style="margin-left: -5px !important;">
-  <ion-tabs class="tabs-icon-only tabs-stable tabs-color-active-energized">
+  <ion-tabs class="tabs-icon-only tabs-stable balanced">
     <ion-tab icon-off="ion-chatbox" badge="unreadMessages" badge-style="badge-assertive" icon-on="ion-chatbox" ng-click="changeTab('messages')">
       <ion-nav-view name="tab-chats"></ion-nav-view>
     </ion-tab>
