--- a/www/views/profile/profile.html
+++ b/www/views/profile/profile.html
@@ -1,5 +1,5 @@
 <ion-view hide-back-button="true" hide-nav-bar="true" can-swipe-back="false">
-  <ion-header-bar align-title="center" class="bar-energized">
+  <ion-header-bar align-title="center" class="bar-balanced">
     <h1 class="title">Profile</h1>
   </ion-header-bar>
   <ion-content class="padding has-footer">
