Minor update to css.

--- a/www/views/forgotPassword/forgotPassword.html
+++ b/www/views/forgotPassword/forgotPassword.html
@@ -1,4 +1,4 @@
-<ion-view hide-back-button="true" hide-nav-bar="true">
+v<ion-view hide-back-button="true" hide-nav-bar="true">
   <ion-content class="padding">
     <div class="list text-center padding">
       <img class="logo" src="img/logo.png">
