--- a/www/views/group/group.html
+++ b/www/views/group/group.html
@@ -1,5 +1,5 @@
 <ion-view hide-back-button="true" hide-nav-bar="true" can-swipe-back="false" cache-view="false">
-  <ion-header-bar align-title="center" class="bar-energized" ng-click="scrollTop()">
+  <ion-header-bar align-title="center" class="bar-balanced" ng-click="scrollTop()">
     <button class="button button-clear" ng-click="back()">Back</button>
     <h1 class="title">{{groupName}}</h1>
     <button class="button button-clear" ng-click="details()"><i class="icon ion-gear-b"></i></button>
