--- a/www/views/groups/groups.html
+++ b/www/views/groups/groups.html
@@ -1,5 +1,5 @@
 <ion-view hide-back-button="true" hide-nav-bar="true" can-swipe-back="false">
-  <ion-header-bar align-title="center" class="bar-energized">
+  <ion-header-bar align-title="center" class="bar-balanced">
     <button class="button button-clear" ng-click="cancel()" ng-if="mode == 'Compose'">Cancel</button>
     <h1 class="title" ng-if="mode == 'Groups'">Groups</h1>
     <h1 class="title" ng-if="mode == 'Compose'">New Group</h1>
