--- a/www/views/login/login.html
+++ b/www/views/login/login.html
@@ -13,10 +13,10 @@
           <span class="input-label">Password:</span>
           <input name="password" type="password" ng-model="user.password" placeholder="Password" ng-minlength="5" ng-maxlength="30" required>
         </label>
-        <input type="submit" class="button button-block button-clear button-energized font-size-150" value="Continue" ng-disabled="loginForm.$invalid">
+        <input type="submit" class="button button-block button-clear button-balanced font-size-150" value="Continue" ng-disabled="loginForm.$invalid">
         <div class="button-bar">
-          <a href="#/forgotPassword" class="button button-clear button-energized">Forgot Password</a>
-          <a href="#/register" class="button button-clear button-energized">Register</a>
+          <a href="#/forgotPassword" class="button button-clear button-balanced">Forgot Password</a>
+          <a href="#/register" class="button button-clear button-balanced">Register</a>
         </div>
       </div>
     </form>
@@ -27,7 +27,7 @@
     </div>
     <div class="list text-center padding">
       <p class="line-height-160 larger-clear">By using this application, you agree to our</br><a href="#">Terms of Use</a> and that you have read our<a href="#"> Privacy Policy</a></p>
-      <p class="larger-clear font-bold energized">FireLine © 2016</p>
+      <p class="larger-clear font-bold balanced">49ertutor © 2016</p>
     </div>
   </ion-content>
 </ion-view>
