--- a/www/views/messages/messages.html
+++ b/www/views/messages/messages.html
@@ -1,5 +1,5 @@
 <ion-view hide-back-button="true" hide-nav-bar="true" can-swipe-back="false">
-  <ion-header-bar align-title="center" class="bar-energized">
+  <ion-header-bar align-title="center" class="bar-balanced">
     <h1 class="title" ng-if="mode == 'Messages'">Messages</h1>
     <h1 class="title" ng-if="mode == 'Compose'">New Message</h1>
     <button class="button button-clear" ng-click="compose()" ng-if="mode == 'Messages'"><i class="icon ion-ios-compose"></i></button>
