--- a/www/views/friends/friends.html
+++ b/www/views/friends/friends.html
@@ -1,5 +1,5 @@
 <ion-view hide-back-button="true" hide-nav-bar="true" can-swipe-back="false" cache-view="false">
-  <ion-header-bar align-title="center" class="bar-energized">
+  <ion-header-bar align-title="center" class="bar-balanced">
     <h1 class="title">People</h1>
   </ion-header-bar>
   <ion-content class="has-footer">
