--- a/www/views/groupDetails/groupDetails.html
+++ b/www/views/groupDetails/groupDetails.html
@@ -1,5 +1,5 @@
 <ion-view hide-back-button="true" hide-nav-bar="true" can-swipe-back="false" cache-view="false">
-  <ion-header-bar align-title="center" class="bar-energized" ng-click="scrollTop()">
+  <ion-header-bar align-title="center" class="bar-balanced" ng-click="scrollTop()">
     <h1 class="title">Group Details</h1>
     <button class="button button-clear" ng-click="back()">Close</button>
   </ion-header-bar>
