--- a/www/views/message/message.html
+++ b/www/views/message/message.html
@@ -1,5 +1,5 @@
 <ion-view hide-back-button="true" hide-nav-bar="true" can-swipe-back="false" cache-view="false">
-  <ion-header-bar align-title="center" class="bar-energized" ng-click="scrollTop()">
+  <ion-header-bar align-title="center" class="bar-balanced" ng-click="scrollTop()">
     <div class="buttons">
       <button class="button button-clear" ng-click="back()">Back</button>
     </div>
