minor tweak to html Signed-off-by: petermichuncc <plarrimo@uncc.edu>

--- a/www/views/login/login.html
+++ b/www/views/login/login.html
@@ -1,7 +1,7 @@
 <ion-view hide-back-button="true" hide-nav-bar="true">
   <ion-content class="padding">
     <div class="list text-center padding">
-      <img class="logo" src="img/logo.png">
+      <img class="logo" style="width:304px;height:228px;" src="img/logo.png">
     </div>
     <form novalidate name="loginForm" ng-submit="loginForm.$valid && login(user)">
       <div class="list">
@@ -26,7 +26,7 @@
       <button ng-click="loginWithTwitter()" class="button button-calm button-block"><i class="icon padding medium ion-social-twitter clear"></i></button>
     </div>
     <div class="list text-center padding">
-      <p class="line-height-160 larger-clear">By using this application, you agree to our</br><a href="#">Terms of Use</a> and that you have read our<a href="#"> Privacy Policy</a></p>
+      
       <p class="larger-clear font-bold balanced">49ertutor © 2016</p>
     </div>
   </ion-content>
