--- a/www/views/tabs/tabs.html
+++ b/www/views/tabs/tabs.html
@@ -1,3 +1,4 @@
+<!-- Make the tabs look better ->
 <ion-footer-bar style="margin-left: -5px !important;">
   <ion-tabs class="tabs-icon-only tabs-stable balanced">
     <ion-tab icon-off="ion-chatbox" badge="unreadMessages" badge-style="badge-assertive" icon-on="ion-chatbox" ng-click="changeTab('messages')">
