Added a helpful comment.
Signed-off-by: petermichuncc <plarrimo@uncc.edu>

--- a/www/views/messages/messages.html
+++ b/www/views/messages/messages.html
@@ -1,3 +1,5 @@
+<!-- Test ou the messaging page -->
+
 <ion-view hide-back-button="true" hide-nav-bar="true" can-swipe-back="false">
   <ion-header-bar align-title="center" class="bar-balanced">
     <h1 class="title" ng-if="mode == 'Messages'">Messages</h1>
