Added a helpful comment.

--- a/www/views/login/login.html
+++ b/www/views/login/login.html
@@ -1,3 +1,5 @@
+<!-- Connect social media buttons to program -->
+
 <ion-view hide-back-button="true" hide-nav-bar="true">
   <ion-content class="padding">
     <div class="list text-center padding">
