--- a/www/views/tabs/tabs.html
+++ b/www/views/tabs/tabs.html
@@ -1,16 +1,17 @@
 <!-- Make the tabs look better -->
 <ion-footer-bar style="margin-left: -5px !important;">
   <ion-tabs class="tabs-icon-only tabs-stable balanced">
-    <ion-tab icon-off="ion-chatbox" badge="unreadMessages" badge-style="badge-assertive" icon-on="ion-chatbox" ng-click="changeTab('messages')">
-      <ion-nav-view name="tab-chats"></ion-nav-view>
+    <ion-tab icon-off="ion-chatbubble" class="balanced" badge="unreadMessages" badge-style="badge-assertive" icon-on="ion-chatbubble" ng-click="changeTab('messages')">
+      <ion-nav-view name="tab-chats" ></ion-nav-view>
     </ion-tab>
-    <ion-tab icon-off="ion-chatboxes" badge="unreadGroupMessages" badge-style="badge-assertive" icon-on="ion-chatboxes" ng-click="changeTab('groups')">
+    <ion-tab icon-off="ion-chatbubbles" class="balanced" badge="unreadGroupMessages" badge-style="badge-assertive" icon-on="ion-chatbubbles" ng-click="changeTab('groups')">
       <ion-nav-view name="tab-dash"></ion-nav-view>
     </ion-tab>
-    <ion-tab icon-off="ion-ios-people" badge="friendRequestsCount" badge-style="badge-assertive" icon-on="ion-ios-people" ng-click="changeTab('friends')">
+    <ion-tab icon-off="ion-ios-people" class="balanced" badge="friendRequestsCount" badge-style="badge-assertive" icon-on="ion-ios-people" ng-click="changeTab('friends')">
       <ion-nav-view name="tab-favorites"></ion-nav-view>
     </ion-tab>
-    <ion-tab icon-off="ion-gear-b" icon-on="ion-gear-b" ng-click="changeTab('profile')">
+     <!--<ion-tab title="" class="balanced" icon="ion-ios-gear" href="#/tab/home">-->
+    <ion-tab icon-off="ion-ios-settings" class="balanced"  icon-on="ion-ios-settings" ng-click="changeTab('profile')">
       <ion-nav-view name="tab-account"></ion-nav-view>
     </ion-tab>
   </ion-tabs>
