--- a/www/css/style.css
+++ b/www/css/style.css
@@ -10,6 +10,11 @@
 .item-clear {
   border: 0px;
 }
+.tutor
+{
+   border: 1px solid yellow;
+    border-radius: 12px;
+}
 .button {
   border-radius: 5px;
 }
