Added helpful comments

--- a/www/views/profile/profile.html
+++ b/www/views/profile/profile.html
@@ -6,6 +6,7 @@
     <div class="row">
       <div class="col col-50">
       <!-- Change profile image if tutor-->
+      <!-- Make this page look better -->
       <div ng-if="profile.accounttype == 'Student'">
         <img ng-src="{{profile.profilePic}}" id="profilePic" class="profileProfilePic" imageonload="constrainProportion()" ng-click="changeProfilePic()"/>
       </div>
