Added a helpful comment

--- a/www/views/message/message.html
+++ b/www/views/message/message.html
@@ -1,3 +1,6 @@
+
+<!-- Maybe conver this into a page that filters chats based on subjects-->
+
 <ion-view hide-back-button="true" hide-nav-bar="true" can-swipe-back="false" cache-view="false">
   <ion-header-bar align-title="center" class="bar-balanced" ng-click="scrollTop()">
     <div class="buttons">
