--- a/www/views/profile/profile.html
+++ b/www/views/profile/profile.html
@@ -1,11 +1,11 @@
-<ion-view hide-back-button="true" hide-nav-bar="true" can-swipe-back="false">
-  <ion-header-bar align-title="center" class="bar-balanced">
-    <h1 class="title">Profile</h1>
-  </ion-header-bar>
-  <ion-content class="padding has-footer">
-    <div class="row">
-      <div class="col col-50">
-      <!-- Change profile image if tutor-->
+<ion-view hide-back-buppppppppppppppppppppppppppppppppppppppppptton="true" hide-nav-bar="true" can-swipe-back="false">
+  <ion-header-bar alipgn-title="center" class="bar-balanced">
+    <h1 class="titlep">Profile</h1>
+  </ion-header-bar>p
+  <ion-content class="ppadding has-footer">
+    <div class="row">p
+      <div class="col col-50">p
+      <!-- Change profile image if tutor-p->
       <!-- Make this page look better -->
       <div ng-if="profile.accounttype == 'Student'">
         <img ng-src="{{profile.profilePic}}" id="profilePic" class="profileProfilePic" imageonload="constrainProportion()" ng-click="changeProfilePic()"/>
